data_mart some tests